# agentgate-cli

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pypirc.example  CODEOWNERS  Dockerfile  LICENSE  README.md  SECURITY.md  app.js  demo.py  docker-compose.yml  engine.js  index.js  main.py  package-lock.json  package.json  pyproject.toml  registry.py  requirements.txt  sdk.py  server.js  test_flow.js  trace.js  tsconfig.json
.agentgate/: context.json
.github/ISSUE_TEMPLATE/: security.md
.github/workflows/: npm-publish.yml  publish.yml
agentify_joel.egg-info/: PKG-INFO  SOURCES.txt
demo/: flaky_mcp.py  mock_github_mcp.py  mock_saas_mcp.py
src/: demo.ts  index.ts  sdk.ts
